--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="column is-4 is-offset-4">
-    <h3 class="title">Login to do math</h3>
+    <h3 class="title">Login to view the Monthly Calendar and Planner</h3>
     <div class="box">
         {% with messages = get_flashed_messages() %}
             {% if messages %}
