--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -4,7 +4,7 @@
   Welcome, {{ name }}!
 </h1>
     <!-- Form -->
-      <form action="/profile" method="POST" class="page-wrapper">
+<!--form action="/profile" method="POST" class="page-wrapper">
       <div class="calculator-wrapper">
           <div class="calculator-container">
                 <div class="buttons-container">
