--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <h1 class="title">
+  Monthly Calendar and Planner
+</h1>
+<h1 class="title">
   Welcome, {{ name }}!
 </h1>
     <!-- Form -->
