--- a/project/templates/calendar.html
+++ b/project/templates/calendar.html
@@ -4,6 +4,7 @@
 <h1 class="title">
   Welcome, {{ name }}!
 </h1>
+      <form action="/profile" method="POST" class="page-wrapper">
 <!DOCTYPE html>
 <html lang="en">
 <head>
