--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -317,48 +317,48 @@
             };
         }
   
-  #      document.getElementById("calendar").onclick = function(eventData) {
-   #         if (eventData.target.nodeName === "LI" && eventData.target.className === "day") {
-    #            if (++clicksCounter == 1) {
-     #               // Single click behaviour (nothing)
-      #              clicksTimeout = setTimeout(function() { clicksCounter = 0; }, 300);
-       #         } else {
-        #            clearTimeout(clicksTimeout);
-         #           clicksCounter = 0;
-          #          window.location = "/{{ calendar_id }}/{{ year }}/{{ month }}/new_task?day=" +
-           #                            eventData.target.getAttribute("data-day");
-             #   }
-              #  return;
-            #}
-            #if (eventData.target.nodeName === "LI" && eventData.target.className === "task") {
-             #   ToggleDetails(eventData.target.children[0]);
-              #  return;
-            #}
-            #if (eventData.target.nodeName === "P" && (eventData.target.className === "accordion-hidden" ||
-             #                                         eventData.target.className === "accordion-visible")) {
-              #  ToggleDetails(eventData.target);
-               # return;
-            #}
-            # if (eventData.target.nodeName === "A") {
-             #    if (eventData.target.className.indexOf("remove-task") > -1) {
-             #        DeleteTask(eventData.target.getAttribute("data-year"),
-               #             eventData.target.getAttribute("data-month"),
-               #             eventData.target.getAttribute("data-day"),
-              #   #            eventData.target.getAttribute("data-id"),
-                 #           eventData.target.getAttribute("data-title"));
-                 #} else {
-                #     if (eventData.target.className.indexOf("hide-recurrent-task") > -1) {
-                   #      DeleteTaskOcurrence(eventData.target.getAttribute("data-year"),
-                    #                     eventData.target.getAttribute("data-month"),
-                    #                     eventData.target.getAttribute("data-day"),
-                     #                    eventData.target.getAttribute("data-id"),
-                     #                    eventData.target.getAttribute("data-title"));
-              #      }
-           #    }
-           #  }
-             #return;
-         #};
-   #  };
+  //      document.getElementById("calendar").onclick = function(eventData) {
+  //         if (eventData.target.nodeName === "LI" && eventData.target.className === "day") {
+    //            if (++clicksCounter == 1) {
+     //              // Single click behaviour (nothing)
+     //             clicksTimeout = setTimeout(function() { clicksCounter = 0; }, 300);
+       //         } else {
+        //            clearTimeout(clicksTimeout);
+        //          clicksCounter = 0;
+          //         window.location = "/{{ calendar_id }}/{{ year }}/{{ month }}/new_task?day=" +
+          //                            eventData.target.getAttribute("data-day");
+             //   }
+             //  return;
+            //}
+            //if (eventData.target.nodeName === "LI" && eventData.target.className === "task") {
+             //   ToggleDetails(eventData.target.children[0]);
+              //  return;
+            //}
+            //if (eventData.target.nodeName === "P" && (eventData.target.className === "accordion-hidden" ||
+             //                                         eventData.target.className === "accordion-visible")) {
+              //  ToggleDetails(eventData.target);
+               // return;
+            //}
+            // if (eventData.target.nodeName === "A") {
+             //    if (eventData.target.className.indexOf("remove-task") > -1) {
+             //        DeleteTask(eventData.target.getAttribute("data-year"),
+               //             eventData.target.getAttribute("data-month"),
+               //             eventData.target.getAttribute("data-day"),
+              //   #            eventData.target.getAttribute("data-id"),
+                 //           eventData.target.getAttribute("data-title"));
+                 //} else {
+                //     if (eventData.target.className.indexOf("hide-recurrent-task") > -1) {
+                   //      DeleteTaskOcurrence(eventData.target.getAttribute("data-year"),
+                    //                     eventData.target.getAttribute("data-month"),
+                    //                     eventData.target.getAttribute("data-day"),
+                     //                    eventData.target.getAttribute("data-id"),
+                     //                    eventData.target.getAttribute("data-title"));
+              //      }
+           //    }
+           //  }
+             //return;
+         //};
+   //  };
 </script>
 </body>
 </html>
