--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -62,7 +62,58 @@
                         <span class="daynumber">
                 {% endif %}
                 {{ day.day }}</span>
- 
+                <ul class="tasks">
+                    {% if day.month|string in tasks and day.day|string in tasks[day.month|string] %}
+                        {% for task in tasks[day.month|string][day.day|string]|sort(attribute="due_time") %}
+                            <li
+                                {% if day.month != month %}
+                                    class="task greyed"
+                                {% else %}
+                                    class="task"
+                                    style="background-color:{{ task["color"] }}"
+                                {% endif %}
+                                data-year="{{ day.year }}"
+                                data-month="{{ day.month }}"
+                                data-day="{{ day.day }}"
+                                data-id="{{ task["id"] }}"
+                                {% if "repetition_type" in task %}data-recurrent="1"{% endif %}>
+
+                                {% if not task["is_all_day"] %}
+                                    {{ task["due_time"] }}
+                                {% endif %}
+                                {{ task["title"] }}
+                                <p class="accordion-hidden">
+                                    {% if day.month == month %}
+                                        <a href="#"
+                                            data-id="{{ task["id"] }}"
+                                            data-year="{{ day.year }}"
+                                            data-month="{{ day.month }}"
+                                            data-day="{{ day.day }}"
+                                            data-title="{{ task["title"]|replace("\"","") }}"
+                                            class="button smaller remove-task"
+                                            title="Remove task">x</a>
+                                        {% if "repetition_type" in task %}
+                                            <a href="#"
+                                                data-id="{{ task["id"] }}"
+                                                data-year="{{ day.year }}"
+                                                data-month="{{ day.month }}"
+                                                data-day="{{ day.day }}"
+                                                data-title="{{ task["title"]|replace("\"","") }}"
+                                                class="button smaller hide-recurrent-task"
+                                                title="Hide this task ocurrence">H</a>
+                                        {% endif %}
+                                            <a href="/{{ calendar_id }}/{{ day.year }}/{{ day.month }}/{{ day.day }}/{{ task["id"] }}{% if "repetition_type" in task %}?repeats=1{% endif %}"
+                                                class="button smaller edit-task"
+                                                title="Edit task">E</a>
+                                    {% endif %}
+                                    {% if "repetition_type" in task %}
+                                        <span class="button smaller recurrent-task" title="Recurent task">R</span>
+                                    {% endif %}
+                                </p>
+                            </li>
+                        {% endfor %}
+                    {% endif %}
+                </ul>
             </li>
         {% endfor %}
     </ul>
