--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -25,6 +25,10 @@
                             <a href="{{ url_for('main.profile') }}" class="navbar-item">
                                 Profile
                             </a>
+                             {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('main.task') }}" class="navbar-item">
+                                Task
+                            </a>
                             {% endif %}
                             {% if not current_user.is_authenticated %}
                             <a href="{{ url_for('auth.login') }}" class="navbar-item">
