--- a/project/templates/task.html
+++ b/project/templates/task.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -324,3 +325,4 @@
 </script>
 </body>
 </html>
+{% endblock %}
