--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -24,6 +24,7 @@
                             {% if current_user.is_authenticated %}
                             <a href="{{ url_for('main.profile') }}" class="navbar-item">
                                 Profile
+                            {% endif %}
                             </a>
                              {% if current_user.is_authenticated %}
                             <a href="{{ url_for('main.task') }}" class="navbar-item">
