--- a/project/templates/task.html
+++ b/project/templates/task.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -325,4 +324,3 @@
 </script>
 </body>
 </html>
-{% endblock %}
