--- a/project/templates/test2.html
+++ b/project/templates/test2.html
@@ -1,6 +1,6 @@
-import calendar
-import datetime
-import time
+#import calendar
+#import datetime
+#import time
 
 #To print weekheader's
 #print(calendar.weekheader(3))
@@ -11,7 +11,7 @@ import time
 #print()
 
 #Print's April 2020
-print(calendar.month(2020, 4))
+##print(calendar.month(2020, 4))
 
 #Print's an array
 #print(calendar.monthcalendar(2019, 3))
