--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -20,9 +20,9 @@
 <pre>
 import calendar
 # Create a plain text calendar
-c = calendar.TextCalendar(calendar.WEDNESDAY)
-str = c.formatmonth(2020, 1, 0, 0)
-print(str)
+#c = calendar.TextCalendar(calendar.WEDNESDAY)
+#str = c.formatmonth(2020, 1, 0, 0)
+#print(str)
 
 # Create an HTML formatted calendar
 hc = calendar.HTMLCalendar(calendar.WEDNESDAY)
