--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
-          
+
+{% block content %}
+<h1 class="title">
+  Welcome, {{ name }}!
+</h1> 
+{% endblock %}
+         
 {% block head %}
     {{ super() }}
     <style type="text/css"><!--
