--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -3,9 +3,9 @@
 {% block content %}
 <h1 class="title">
   Welcome, {{ name }}!
-</h1> 
+</h1><h1 class="title">
 {% endblock %}
-         
+
 {% block head %}
     {{ super() }}
     <style type="text/css"><!--
