--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -7,4 +7,7 @@
 <h2 class="subtitle">
   Monthly Calendar and Planner
 </h2>
+<h3 class="subtitle">
+Once logged in, you may view your personal calendar, add and delete events, and see when a variety of holidays are scheduled.
+</h3> 
 {% endblock %}
