--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -7,6 +7,25 @@
 <h2 class="subtitle">
   Monthly Calendar and Planner
 </h2>
+                <div class="page-header">
+
+                        <div class="pull-right form-inline">
+                                <div class="btn-group">
+                                        <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
+                                        <button class="btn" data-calendar-nav="today">Today</button>
+                                        <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
+                                </div>
+                                <div class="btn-group">
+                                        <button class="btn btn-warning" data-calendar-view="year">Year</button>
+                                        <button class="btn btn-warning active" data-calendar-view="month">Month</button>
+                                        <button class="btn btn-warning" data-calendar-view="week">Week</button>
+                                        <button class="btn btn-warning" data-calendar-view="day">Day</button>
+                                </div>
+                        </div>
+
+                        <h3></h3>
+                </div>
+
     <div class="table-responsive">
     {{ calendar|safe }}
     </div>
