--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -26,6 +26,10 @@
                         <h3></h3>
                 </div>
 
+<div class="clearfix">
+	<a class="btn btn-info left" href="{'% url 'cal:calendar' %}?{'{ prev_month }}"> Previous Month </a>
+	<a class="btn btn-info right" href="{'% url 'cal:calendar' %}?{'{ next_month }}"> Next Month </a>
+</div>
     <div class="table-responsive">
     {{ calendar|safe }}
     </div>
