--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -7,30 +7,26 @@
 <h2 class="subtitle">
   Monthly Calendar and Planner
 </h2>
-                <div class="page-header">
-
-                        <div class="pull-right form-inline">
-                                <div class="btn-group">
-                                        <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
-                                        <button class="btn" data-calendar-nav="today">Today</button>
-                                        <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
-                                </div>
-                                <div class="btn-group">
-                                        <button class="btn btn-warning" data-calendar-view="year">Year</button>
-                                        <button class="btn btn-warning active" data-calendar-view="month">Month</button>
-                                        <button class="btn btn-warning" data-calendar-view="week">Week</button>
-                                        <button class="btn btn-warning" data-calendar-view="day">Day</button>
-                                </div>
-                        </div>
-
-                        <h3></h3>
-                </div>
 
 <div class="clearfix">
-	<a class="btn btn-info left" href="{'% url 'cal:calendar' %}?{'{ prev_month }}"> Previous Month </a>
-	<a class="btn btn-info right" href="{'% url 'cal:calendar' %}?{'{ next_month }}"> Next Month </a>
+	<a class="btn btn-info left""> Previous Month </a>
+	<a class="btn btn-info right"> Next Month </a>
 </div>
+
     <div class="table-responsive">
     {{ calendar|safe }}
     </div>
+
+Add event to your calendar
+<form>
+<label for="eventtitle">Event title:</label>
+<input type="text" id="eventtitle" name="eventtitle"><br>
+<label for="eventdesc">Event description:</label>
+<input type="text" id="eventdesc" name="eventdesc"><br>
+<label for="starttime">Start day/time:</label>
+<input type="datetime-local" id="starttime" name="starttime"><br>
+<label for="endtime">End day/time:</label>
+<input type="datetime-local" id="endtime" name="endtime"><br>
+<input type="submit" value="Add to calendar">
+</form>
 {% endblock %}
