TASK: Update index.html file

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -7,7 +7,12 @@
 <h2 class="subtitle">
   Monthly Calendar and Planner
 </h2>
+</br>
 <h3 class="subtitle">
-Once logged in, you may view your personal calendar, add and delete events, and see when a variety of holidays are scheduled.
+Sign up for an account today to get access to a convenient, user-friendly calendar! 
 </h3> 
+</br>
+<h4 class="subtitle">
+Once logged in, you may view your personal calendar, add and delete events, and see when a variety of holidays are scheduled.
+</h4> 
 {% endblock %}
