--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -17,7 +17,17 @@
     {{ calendar|safe }}
     </div>
 
+<div class="box">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class="notification is-danger">
+            {{ messages[0] }}.
+        </div>
+        {% endif %}
+        {% endwith %}
+
 Add event to your calendar
+
 <!-- <form>
 <label for="eventtitle">Event title:</label>
 <input type="text" id="eventtitle" name="eventtitle"><br>
@@ -33,27 +43,27 @@ Add event to your calendar
 <form method="POST" action="/calendar" class="event-form">
     <div class="field">
         <div class="control">
-            <input class="event-input" type="text" name="eventtitle" placeholder="Event Title" autofocus="">
+            <input class="event-input" type="text" id="eventtitle" placeholder="Event Title" autofocus="">
         </div>
     </div>
 
     <div class="field">
         <div class="control">
-            <input class="event-input" type="text" name="eventdesc" placeholder="Event Description" autofocus="">
+            <input class="event-input" type="text" id="eventdesc" placeholder="Event Description" autofocus="">
         </div>
     </div>
 
     <div class="field">
         <div class="control">
             <label for="starttime">Start day/time:</label>
-            <input class="event-input" type="datetime-local" name="startime" placeholder="Start Date/Time" autofocus="">
+            <input class="event-input" type="datetime-local" id="starttime" placeholder="Start Date/Time" autofocus="">
         </div>
     </div>
 
     <div class="field">
         <div class="control">
             <label for="endtime">End day/time:</label>
-            <input class="event-input" type="datetime-local" name="endtime" placeholder="End Date/Time" autofocus="">
+            <input class="event-input" type="datetime-local" id="endtime" placeholder="End Date/Time" autofocus="">
         </div>
     </div>
 
