converted local imports to regular imports. Removed unncessary imports. Fixed event form to have proper name attributes. Correctly converted string to datetime for DB insertion

--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -43,27 +43,27 @@ Add event to your calendar
 <form method="POST" action="/calendar" class="event-form">
     <div class="field">
         <div class="control">
-            <input class="event-input" type="text" id="eventtitle" placeholder="Event Title" autofocus="">
+            <input class="event-input" type="text" name="eventtitle" placeholder="Event Title" autofocus="">
         </div>
     </div>
 
     <div class="field">
         <div class="control">
-            <input class="event-input" type="text" id="eventdesc" placeholder="Event Description" autofocus="">
+            <input class="event-input" type="text" name="eventdesc" placeholder="Event Description" autofocus="">
         </div>
     </div>
 
     <div class="field">
         <div class="control">
             <label for="starttime">Start day/time:</label>
-            <input class="event-input" type="datetime-local" id="starttime" placeholder="Start Date/Time" autofocus="">
+            <input class="event-input" type="datetime-local" name="starttime" placeholder="Start Date/Time" autofocus="">
         </div>
     </div>
 
     <div class="field">
         <div class="control">
             <label for="endtime">End day/time:</label>
-            <input class="event-input" type="datetime-local" id="endtime" placeholder="End Date/Time" autofocus="">
+            <input class="event-input" type="datetime-local" name="endtime" placeholder="End Date/Time" autofocus="">
         </div>
     </div>
 
