FEATURE: added scroll buttons to index through previous/next months

--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -9,8 +9,8 @@
 </h2>
 
 <div class="clearfix">
-	<a class="btn btn-info left""> Previous Month </a>
-	<a class="btn btn-info right"> Next Month </a>
+	<a class="btn btn-info left" href="{{ url_for('cal.monthDOWN') }}"> Previous Month </a>
+	<a class="btn btn-info right" href="{{ url_for('cal.monthUP') }}"> Next Month </a>
 </div>
 
     <div class="table-responsive">
