--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class="title">
-  Welcome!
+  Welcome, {{ name }}!!
 </h1>
 <h2 class="subtitle">
   Monthly Calendar and Planner
