--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -74,5 +74,31 @@ Add event to your calendar
 
     <button class="event-button">Add event</button>
 </form>
+
+<div class="event-wrapper">
+        <div class="log-container">
+          <div class="title-container">
+            <h1>{{ name }}'s Events</h1>
+            <input type="submit" class="button deleteAll" name="function" value="Delete All My Events"></input>
+          </div>
+        <table class="events-container">
+        {% if logCount %}
+            {% for log in logCount %}
+            <tr class="table-row">
+              <td class='log'>{{log.eventtitle}}:</td>
+              <td class='log'>{{log.eventdesc}}</td>
+              <td class='log'>{{log.starttime}}:</td>
+              <td class='log'>{{log.endtime}}</td>
+              <td>
+                  <a class="button delete">Delete this event</a>
+              </td>
+              <td>
+<!--                <a href="{{ url_for('main.return_numbers', component_id=log.id) }}" class="button bring-back">bring back</a> -->
+              </td>
+            </tr>
+          {% endfor %}
+        {% endif %}
+        </table>
+        </div>
     
 {% endblock %}
