--- a/project/cal/templates/calendar.html
+++ b/project/cal/templates/calendar.html
@@ -14,8 +14,8 @@
 </div>
 
 <div class="year buttons">
-        <a class="btn btn-success" href="{{ url_for('cal.yearDOWN') }}"> Previous Year </a>
-        <a class="btn btn-success" href="{{ url_for('cal.yearUP') }}"> Next Year </a>
+        <a class="btn btn-success float-right" href="{{ url_for('cal.yearDOWN') }}"> Previous Year </a>
+        <a class="btn btn-success float-right" href="{{ url_for('cal.yearUP') }}"> Next Year </a>
 </div>
 
     <div class="table-responsive">
